# python-sdk

./: .gitignore  MANIFEST.in  README.md  justfile  mkdocs.yml  netlify-build-doc.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
docs/: auth.md  index.md  mkdocs.yml  recognition_api.md
docs/css/: mkdocstrings.css
docs/docs/: conversation_api.md  index.md
examples/conversation/: README.md  addr-sil.pcm  observer.py  silence.pcm  stream_file.py  stream_file_async.py  stream_microphone.py  stream_microphone_async.py
examples/recognition/: README.md  async_bot_lib.py  basic_async.py  basic_sync.py  desktop-bot_async.py  desktop-bot_sync.py  guess_game.py  guess_game_async.py  res.txt  sync_bot_lib.py  test_runner.py  test_runner_async.py  transcribe.py
examples/recognition/fixtures/: fr_address.test  fr_address_ok.pcm  parcel_number.alaw  parcel_number.pcm  parcel_number.test
src/uhlive/: auth.py
src/uhlive/stream/conversation/: __init__.py  client.py  error.py  events.py  human_datetime.py
src/uhlive/stream/recognition/: __init__.py  client.py  events.py
tests/: conversation_events.py  recog_events.py  test_conversation_client.py  test_conversation_events.py  test_recog_connection.py  test_recog_events.py
