[project]
name = "uhlive"
version = "2.1.0"
url="https://github.com/uhlive/python-sdk"
authors = [
    { name = "Allo-Media", email = "support@uh.live" }
]
requires-python = ">=3.10"
description = "Uhlive Python SDK"
readme = "README.md"
dependencies = []
license="MIT"
license_files = ["LICENSE"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
examples = [
    "aiohttp>=3.13.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "toml>=0.10.2",
    "websocket-client>=1.9.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings-python>=1.18.2",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
    "types-requests>=2.32.4.20250913",
]
